--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,7 @@
 {
-	"extends": "next/core-web-vitals",
-	"rules": {
-		"@next/next/no-img-element": "off",
-		"@next/next/google-font-display": "off"
-	}
+  "extends": ["next", "prettier"],
+  "rules": {
+    // "@next/next/no-img-element": "off",
+    "@next/next/google-font-display": "off"
+  }
 }
