--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev -p 3333",
     "lint": "next lint",
+    "format": "prettier --write .",
     "build": "next build && next-sitemap && next export",
     "start": "next start"
   },
@@ -22,7 +23,9 @@
   "devDependencies": {
     "eslint": "8.6.0",
     "eslint-config-next": "12.0.8",
+    "eslint-config-prettier": "^8.3.0",
     "next-sitemap": "^1.9.9",
+    "prettier": "^2.5.1",
     "sass": "^1.48.0"
   }
 }
