add bundle analyzer

--- a/package.json
+++ b/package.json
@@ -3,14 +3,16 @@
   "version": "2.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 3333",
-    "lint": "next lint",
-    "format": "prettier --write .",
+    "analyze": "ANALYZE=true next build",
     "build": "next build && next-sitemap && next export",
+    "dev": "next dev -p 3333",
+    "format": "prettier --write .",
+    "lint": "next lint",
     "start": "next start"
   },
   "dependencies": {
     "@cloudcannon/react-connector": "^1.0.8",
+    "@next/bundle-analyzer": "^12.1.0",
     "disqus-react": "^1.1.2",
     "gray-matter": "^4.0.3",
     "markdown-it": "^12.3.2",
