--- a/package.json
+++ b/package.json
@@ -23,13 +23,16 @@
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.2",
     "autoprefixer": "^10.4.2",
     "eslint": "8.10.0",
     "eslint-config-next": "12.1.0",
     "eslint-config-prettier": "^8.5.0",
     "next-sitemap": "^2.5.4",
-    "prettier": "^2.5.1",
     "postcss": "^8.4.7",
+    "postcss-import": "^14.0.2",
+    "postcss-nested": "^5.0.6",
+    "prettier": "^2.5.1",
     "sass": "^1.49.9",
     "tailwindcss": "^3.0.23"
   }
