--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "next-seo": "^5.1.0",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "swr": "^1.3.0"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.2",
