--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-moment": "^1.1.2",
+    "react-tooltip": "^4.2.21",
     "swr": "^1.3.0"
   },
   "devDependencies": {
