--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   },
   "dependencies": {
     "@cloudcannon/react-connector": "^1.0.8",
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@mui/material": "^5.8.3",
     "@next/bundle-analyzer": "^12.1.0",
     "disqus-react": "^1.1.2",
     "gray-matter": "^4.0.3",
@@ -22,7 +25,6 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-moment": "^1.1.2",
-    "react-tooltip": "^4.2.21",
     "swr": "^1.3.0"
   },
   "devDependencies": {
